# Solarium

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Solarium/: CMakeLists.txt  CMakeSettings.json  Defines.h
Solarium/Engine/: BufferHelper.cpp  BufferHelper.hpp  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.h  Engine.hpp  Logger.cpp  Logger.h  Logger.hpp  Pipeline.cpp  Pipeline.hpp  Platform.cpp  Platform.h  Platform.hpp  ShaderHelper.cpp  ShaderHelper.hpp  Shaders.cpp  Shaders.hpp  Solarium.cpp  Solarium.h  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  UBO.cpp  UBO.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VulkanHelper.cpp  VulkanHelper.hpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer.hpp
Solarium/Shaders/: Test_shader.vert  compile.bat  main.frag  main.vert
Solarium/include/shaderc/: shaderc.hpp
Solarium/shadders/: .gitignore  main.frag  main.vert  parameters.h
Solarium/shadders/rewrite/: main.frag  main.vert
Solarium/shadders/shadders/: common.glsl  main.frag  main.vert
Solarium/shadders/shadders-rasterization/: common.glsl  main.frag  main.vert  parameters.glsl
Solarium/shadders/simple-shading/: main.frag  readme.md
Solarium/shadders/todo/: README.md
Solarium/shadders/todo/shadders/: README.md  main.frag  main.vert  parameters.glsl
Solarium/shadders/todo/shadders-rasterization/: README.md  main.frag  main.vert  parameters.glsl
Solarium/shadders/todo/simple-shading/: main.frag  main.vert
shadders/: README.md  main.frag
